themes: add disqus

--- a/themes/research/layouts/_default/single.html
+++ b/themes/research/layouts/_default/single.html
@@ -12,4 +12,6 @@
 		</article>
 	</main>
 {{ partial "sidebar.html" . }}
+{{ partial "scripts" .}}
+{{ template "_internal/disqus.html" . }}
 {{ end }}
