--- a/themes/research/layouts/_default/single.html
+++ b/themes/research/layouts/_default/single.html
@@ -13,5 +13,14 @@
 	</main>
 {{ partial "sidebar.html" . }}
 {{ partial "scripts" .}}
-{{ template "_internal/disqus.html" . }}
+
+<!-- comments -->
+<script src="https://utteranc.es/client.js"
+        repo="golang-design/research"
+        issue-term="pathname"
+        label="comments"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>>
 {{ end }}
