--- a/themes/research/layouts/partials/scripts.html
+++ b/themes/research/layouts/partials/scripts.html
@@ -11,3 +11,12 @@ MathJax.Hub.Config({
 });
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML' async></script>
+<script src="https://utteranc.es/client.js"
+        repo="golang-design/research"
+        issue-term="pathname"
+        label="comments"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>
+<script async src="//changkun.de/urlstat/client.js"></script>
