themes: add favicon

--- a/themes/research/layouts/_default/baseof.html
+++ b/themes/research/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
 	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	{{ range .Site.Params.customCSS -}}
 		<link rel="stylesheet" href="{{ . | relURL }}?rnd={{ now.Unix }}">
 	{{- end }}
